# Pandora-Engine

./: .gitignore  CMakeLists.txt  Doxyfile  Pandora Engine.cfg  Pandora Engine.proj.cfg  PandoraEngine.cfg  Pandora_Engine.cfg  README.md  macros.txt  style.txt
Pandora Core/sources/: Pandora Core.cpp
Pandora Core/sources/Colors/: Colors.hpp  RGB.cpp
Pandora IO/headers/: Win32.hpp
Pandora IO/sources/: Pandora IO.cpp
Pandora IO/sources/Window/: Win32.cpp
Pandora IO/sources/Window/Win32/: Win32.cpp
app/sources/: main.cpp
assets/shaders/fragment/: test.hlsl
include/glad/: glad.h
other/: ASCII Color Codes.txt  TODO  copilot.txt  ötlet.txt
src/: Console.hpp  Exceptions.hpp  Method.hpp  PandoraCore.hpp  PandoraEngine.hpp  main.cpp  test.cpp
src/C# DLL/: C# dll.hpp  io.cpp  io.h
src/CONSOLE/: console.hpp  fancyLog.cpp  fancyLog.hpp
src/CS_Compatibility/: CS_Core.h  PandoraCore.cpp  PandoraCore.h
src/Console/: Console.cpp  DebugConsole.cpp
src/Core/: Application.cpp  Application.hpp  ClassObject.hpp  Event.hpp  Exception.cpp  Macros.h  Method.hpp  PandoraCore.cpp  Parameters.cpp  Parameters.hpp  Parameters2D.cpp  ParametersApp.cpp  Thread.cpp  Thread.hpp  Types.hpp  Units.hpp
src/Core/Components/: BaseComponent.cpp  BaseComponent.hpp  CollisionComponent2D.cpp  CollisionComponent2D.hpp  ComponenetTypenames.hpp  ComponentsHandler.cpp  ComponentsHandler.hpp  ShaderComponent.cpp  ShaderComponent.hpp  ShaderComponent2D.cpp  ShaderComponent2D.hpp  TextComponenet2D.hpp  Textture2D.cpp  Texture2D.hpp  Transform2D.cpp  Transform2D.hpp
src/Core/Elements/: BaseObject.cpp  BaseObject.hpp  Object.cpp  Object.hpp  ObjectsHandler.cpp  ObjectsHandler.hpp
src/Core/Elements/UI/: Button.cpp  Button.hpp
src/Core/Rendering/: BaseObject.cpp  BaseObject.hpp  Color.cpp  Color.hpp  ImmortalObject.hpp  Object.hpp  ObjectsHandler.cpp  ObjectsHandler.hpp  PrimitiveShapes2D.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/Core/Rendering/UI/: Text2D.cpp  Text2D.hpp  UIElement.hpp
src/DLL/: dll.hpp  init.cpp  init.hpp
src/Debug/: Console.cpp  Console.hpp  DebugConsole.cpp  DebugConsole.hpp
src/ESSENTIALS/: dll.hpp  essential.hpp
src/IO/: BaseWindow.cpp  BaseWindow.hpp  GameWindow.hpp  Image.cpp  Image.hpp  InputHandler.hpp  KeyInputHandler.cpp  Logger.cpp  Logger.hpp  MainWindow.cpp  MainWindow.hpp  Monitor.cpp  Monitor.hpp  MouseInputHandler.cpp  Window.cpp  Window.hpp  WindowHandler.cpp  WindowHandler.hpp  Windows.hpp  WindowsHandler.cpp  WindowsHandler.hpp  files.cpp  files.hpp  input.cpp  input.hpp  io.hpp  mouse.cpp  mouse.hpp  window.cpp  window.hpp
src/IO/Windows/: BaseWindow.cpp  BaseWindow.hpp  IWindowEvents.hpp  Window.hpp  Windowshandler.hpp
src/IO/Windows/Interfaces/: IWindow.hpp  IWindowActions.hpp  IWindowProperties.hpp
src/PANDORA/: mainWindow.cpp  mainWindow.hpp  objects.cpp  objects.hpp  pandora.hpp  scenes.cpp  shader.cpp  texture.cpp  texture.hpp
src/PANDORA/COMPONENTS/: components.cpp  components.hpp  image.cpp  image.hpp  shader.cpp  shader.hpp  transform.cpp
src/PANDORA/GAME/UI/: button.cpp  button.hpp  check_box.cpp  check_box.hpp  progress_bar.cpp  progress_bar.hpp  scrollbar.cpp  scrollbar.hpp  switch.cpp  switch.hpp  ui.hpp  ui_elements.cpp  ui_elements.hpp
src/UTILS/: bool.hpp  parameters.hpp  random.cpp  random.hpp  string.cpp  string.hpp  timer.cpp  timer.hpp  utils.hpp
src/test/: test.cpp
test/src/: main.cpp
